# interactive-studio

./: .gitignore  ARCHITECTURE.md  PROMPT.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
memory/: 2026-02-17-b.md  2026-02-17-c.md  2026-02-17.md  2026-02-18.md  2026-02-21.md  2026-02-22.md  2026-05-06.md  2026-05-07.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: filesystem.rs  mod.rs  python.rs  shell.rs  workspace.rs
src-tauri/src/watchers/: fs_watcher.rs
src/components/console/: ConsolePanel.tsx
src/components/editor/: CodeEditor.tsx  EditorPane.tsx  TabBar.tsx  cmLanguages.ts  cmTheme.ts
src/components/filetree/: FileTree.tsx  index.ts  (+1 more)
src/hooks/: useAutoSave.ts  useCodeExecution.ts  useDebounce.ts  useFileOperations.ts  useKeyboardShortcuts.ts  usePreview.ts  useTheme.ts  useWorkspace.ts
src/lib/: fileIcons.ts  languageDetect.ts  previewBridge.ts  previewBuilder.ts  previewTranspile.ts  runtime.ts  tauriFS.ts  templates.ts  workspacePath.ts
src/providers/: ThemeProvider.tsx
src/store/: editorStore.ts  executionStore.ts  settingsStore.ts  uiStore.ts  workspaceStore.ts
src/styles/: globals.css
workspace/hello-world/: index.html  main.js  style.css
workspace/js-advanced/: index.html  main.js  style.css
workspace/python-dash/: README.md  app.py  pyproject.toml
workspace/python-fastapi/: README.md  main.py  pyproject.toml
workspace/python-hello-world/: main.py
workspace/python-viz/: main.py
(+224 files in other folders)
